Remove properties interferring with coverage